force-app/main/default/objects/Order/fields/Adjusted_Merch_Total_Tax__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Merch_Total_Tax__c</fullName>
    <label>Adjusted Merch Total Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>