force-app/main/default/objects/Order/fields/Balance_Already_Paid__c.field-meta.xml
<CustomField>
    <fullName>Balance_Already_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True once the balance (second) payment is known to be paid — either mirrored from alreadyPaid on POST /action/sfsc-balance-link, or set by CARABalancePaymentConfirmationService when SFCC confirms successful payment. When true, the balance notification is not re-sent.</description>
    <label>Balance Already Paid</label>
    <type>Checkbox</type>
</CustomField>