force-app/main/default/objects/Order/fields/Balance_Link__c.field-meta.xml
<CustomField>
    <fullName>Balance_Link__c</fullName>
    <description>Link 2 (balance payment) returned by POST /action/sfsc-balance-link, e.g. /pay/balance?orderNo=... Sent to the customer by CARASplitPaymentNotificationService once the piece is ready for delivery.</description>
    <label>Balance Link</label>
    <type>Url</type>
</CustomField>