force-app/main/default/objects/Order/fields/Balance_Link_Log__c.field-meta.xml
<CustomField>
    <fullName>Balance_Link_Log__c</fullName>
    <description>Timestamped audit trail of balance-link callouts to SFCC/MRT for this Order — status codes, categorised errors (400 payload / 401 auth / 502 gateway), and retry outcomes.</description>
    <label>Balance Link Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>