force-app/main/default/objects/Order/fields/Balance_Link_Status__c.field-meta.xml
<CustomField>
    <fullName>Balance_Link_Status__c</fullName>
    <description>Outcome of the most recent POST /action/sfsc-balance-link call for this Order.</description>
    <label>Balance Link Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Requested</fullName>
                <default>true</default>
                <label>Not Requested</label>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Already Paid</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>