force-app/main/default/objects/Order/fields/Balance_Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>Balance_Payment_Reference__c</fullName>
    <description>SFCC/N-Genius transaction reference for the completed balance (second) payment, set by CARABalancePaymentConfirmationService once SFCC confirms successful payment. Used to make the confirmation callback idempotent.</description>
    <label>Balance Payment Reference</label>
    <length>180</length>
    <type>Text</type>
</CustomField>