force-app/main/default/objects/Order/fields/Balance_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Balance_Remaining__c</fullName>
    <description>Remaining balance confirmed back by SFCC/MRT on POST /action/sfsc-balance-link.</description>
    <label>Balance Remaining</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>