force-app/main/default/objects/Order/fields/Confirmation_Status__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Status__c</fullName>
    <label>Confirmation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>