force-app/main/default/objects/Order/fields/Created_By_Context__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Context__c</fullName>
    <label>Created By Context</label>
    <length>100</length>
    <type>Text</type>
</CustomField>