force-app/main/default/objects/Order/fields/CurrencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyIsoCode__c</fullName>
    <label>Currency Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>