force-app/main/default/objects/Order/fields/Customer_Name_Plain__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_Plain__c</fullName>
    <label>Customer Name Plain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>