force-app/main/default/objects/Order/fields/Export_Status__c.field-meta.xml
<CustomField>
    <fullName>Export_Status__c</fullName>
    <label>Export Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>