force-app/main/default/objects/Order/fields/isKycNeed__c.field-meta.xml
<CustomField>
    <fullName>isKycNeed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isKycNeed</label>
    <type>Checkbox</type>
</CustomField>