force-app/main/default/objects/Order/fields/Merchandize_Total_Tax__c.field-meta.xml
<CustomField>
    <fullName>Merchandize_Total_Tax__c</fullName>
    <label>Merchandize Total Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>