force-app/main/default/objects/Order/fields/OrderSource__c.field-meta.xml
<CustomField>
    <fullName>OrderSource__c</fullName>
    <label>Order Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>