force-app/main/default/objects/Order/fields/Shipping_Status__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Status__c</fullName>
    <label>Shipping Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>