force-app/main/default/objects/Order/fields/Shipping_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Total_Cost__c</fullName>
    <label>Shipping Total Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>