force-app/main/default/objects/Order/fields/Shipping_Total_Tax__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Total_Tax__c</fullName>
    <label>Shipping Total Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>