force-app/main/default/objects/Order/fields/Storefront_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Storefront_Last_Modified__c</fullName>
    <label>Storefront Last Modified</label>
    <type>DateTime</type>
</CustomField>