force-app/main/default/objects/Order/fields/Storefront_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Storefront_Site_ID__c</fullName>
    <label>Storefront Site ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>