force-app/main/default/objects/Order/fields/Storefront_Token__c.field-meta.xml
<CustomField>
    <fullName>Storefront_Token__c</fullName>
    <label>Storefront Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>