force-app/main/default/objects/Order/fields/Storefront_View_Code__c.field-meta.xml
<CustomField>
    <fullName>Storefront_View_Code__c</fullName>
    <label>Storefront View Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>