force-app/main/default/objects/Order/fields/Tax_Rounded_At_Group__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rounded_At_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Rounded At Group</label>
    <type>Checkbox</type>
</CustomField>