force-app/main/default/objects/Order/fields/Taxation_Type__c.field-meta.xml
<CustomField>
    <fullName>Taxation_Type__c</fullName>
    <label>Taxation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>